--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/commons-httpclient-3.1.jar')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
-    compile files('libs/commons-httpclient-3.1.jar')
     compile 'com.zhy:autolayout:1.4.5'
+    compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
 }
