--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,43 +16,49 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="design_width" android:value="1280">
-        </meta-data>
-        <meta-data android:name="design_height" android:value="768">
-        </meta-data>
+        <meta-data
+            android:name="design_width"
+            android:value="1280"></meta-data>
+        <meta-data
+            android:name="design_height"
+            android:value="768"></meta-data>
+
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Black.NoTitleBar"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:screenOrientation="landscape">
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".activity.XxbgActivity"
-            android:screenOrientation="landscape">
-        </activity>
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".activity.TxsbcxActivity"
-            android:screenOrientation="landscape">
-        </activity>
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".activity.TxxjActivity"
-            android:screenOrientation="landscape">
-        </activity>
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".activity.GqkshActivity"
-            android:screenOrientation="landscape">
-        </activity>
-        <activity android:name=".activity.AddGdtbActivity"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustPan"></activity>
 
+        <activity
+            android:name=".activity.GdpsAddPeopleActivity"
+            android:theme="@style/MyDialogStyleBottom"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustPan"></activity>
     </application>
 
 </manifest>
