--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,10 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="design_width"
-            android:value="1280"></meta-data>
+            android:value="1280" />
         <meta-data
             android:name="design_height"
-            android:value="768"></meta-data>
+            android:value="768" />
 
         <activity
             android:name=".activity.LoginActivity"
@@ -36,29 +36,33 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".activity.XxbgActivity"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.TxsbcxActivity"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.TxxjActivity"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.GqkshActivity"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="adjustPan"></activity>
-
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.GdpsAddPeopleActivity"
-            android:theme="@style/MyDialogStyleBottom"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:theme="@style/MyDialogStyleBottom"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".activity.AddWwytActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/MyDialogStyleBottom"
+            android:windowSoftInputMode="adjustPan"
+            ></activity>
     </application>
 
 </manifest>
