--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.zhy:autolayout:1.4.5'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.github.jjobes:slideDateTimePicker:1.0.2'
     testCompile 'junit:junit:4.12'
 }
