--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.zhy:autolayout:1.4.5'
     compile 'com.android.support:design:24.2.1'
     compile 'com.github.jjobes:slideDateTimePicker:1.0.2'
+    compile 'cn.yipianfengye.android:zxing-library:2.0'
+    compile 'org.xutils:xutils:3.3.36'
     testCompile 'junit:junit:4.12'
 }
