--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'org.xutils:xutils:3.3.36'
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.jakewharton:butterknife:7.0.0'   //view 注解
+
 }
