--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -63,11 +63,15 @@
             android:screenOrientation="landscape"
             android:theme="@style/MyDialogStyleBottom"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activity.AddWwytActivity"
+        <activity
+            android:name=".activity.AddWwytActivity"
             android:screenOrientation="landscape"
             android:theme="@style/MyDialogStyleBottom"
-            android:windowSoftInputMode="adjustPan"
-            ></activity>
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.KsxjActivity"
+            android:label="@string/title_activity_ksxj"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
