--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/commons-httpclient-3.1.jar')
+    //view 注解
+
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.zhy:autolayout:1.4.5'
@@ -29,8 +31,7 @@ dependencies {
     compile 'com.github.jjobes:slideDateTimePicker:1.0.2'
     compile 'cn.yipianfengye.android:zxing-library:2.0'
     compile 'org.xutils:xutils:3.3.36'
-    testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.jakewharton:butterknife:7.0.0'   //view 注解
-
+    compile 'com.jakewharton:butterknife:7.0.0'
+    testCompile 'junit:junit:4.12'
 }
