--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/commons-httpclient-3.1.jar')
     //view 注解
-
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.zhy:autolayout:1.4.5'
@@ -34,4 +33,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.jakewharton:butterknife:7.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'me.iwf.photopicker:PhotoPicker:0.9.0@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
