--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.yf.bx.tms">
+<manifest package="com.yf.bx.tms"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_PROFILE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:name=".activity.AppContext"
@@ -23,70 +22,76 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="design_width"
-            android:value="1280" />
+            android:value="1280"/>
         <meta-data
             android:name="design_height"
-            android:value="768" />
+            android:value="768"/>
 
+        <activity
+            android:name=".photo_picker.PhotoPickerActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="sensorLandscape"/>
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensorLandscape"
             android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:screenOrientation="sensorLandscape" />
+            android:screenOrientation="sensorLandscape"/>
         <activity
             android:name=".activity.XxbgActivity"
             android:screenOrientation="sensorLandscape"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activity.TxsbcxActivity"
             android:screenOrientation="sensorLandscape"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activity.TxxjActivity"
             android:screenOrientation="sensorLandscape"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activity.GqkshActivity"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activity.GdpsAddPeopleActivity"
             android:screenOrientation="sensorLandscape"
             android:theme="@style/MyDialogStyleBottom"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activity.AddWwytActivity"
             android:screenOrientation="sensorLandscape"
             android:theme="@style/MyDialogStyleBottom"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activity.CqjXzActivity"
-            android:screenOrientation="sensorLandscape" />
+            android:screenOrientation="sensorLandscape"/>
         android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.KsxjActivity"
             android:label="@string/title_activity_ksxj"
             android:screenOrientation="sensorLandscape"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".activity.XjywWwytActivity"
             android:label="@string/title_activity_xjyw_wwyt"
             android:screenOrientation="sensorLandscape"
-            android:theme="@style/MyDialogStyleBottom" />
+            android:theme="@style/MyDialogStyleBottom"/>
         <activity
             android:name=".activity.XjywCkActivity"
             android:label="@string/title_activity_xjyw_ck"
-            android:screenOrientation="sensorLandscape" />
-        <activity android:name=".activity.KsxjPhotoActivity"></activity>
+            android:screenOrientation="sensorLandscape"/>
+        <activity
+            android:name=".activity.KsxjPhotoActivity"
+            android:screenOrientation="sensorLandscape"></activity>
     </application>
 
 </manifest>
