--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'me.iwf.photopicker:PhotoPicker:0.9.0@aar'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'org.litepal.android:core:1.4.0'
 }
